# COMP4040_Team12_FraudDetection

./: .dockerignore  .env.example  .gitattributes  .gitignore  .mcp.json  Dockerfile.api  FinChat.html  PLAN_datamining.md  PRD.md  PROJECT_STRUCTURE.md  README.md  SUPABASE_CLERK_SETUP.md  alembic.ini  dataset_processing_justification.md  docker-compose.server.yml  docker-compose.yml  fraudDetectionPlan.md  fraud_detection_quick_overview.md  milestone.md  package-lock.json  productionPlan.md  pyproject.toml  requirements.txt  server.py  skills-lock.json  test_gemini.py
.playwright-mcp/: page-2026-06-08T00-16-39-280Z.yml  page-2026-06-08T00-25-13-345Z.yml  page-2026-06-08T00-26-39-758Z.yml  page-2026-06-08T00-33-40-002Z.yml  page-2026-06-08T00-35-39-902Z.yml  page-2026-06-08T00-37-24-253Z.yml  page-2026-06-08T00-37-30-224Z.yml  page-2026-06-08T00-40-25-005Z.yml  page-2026-06-08T00-41-28-239Z.yml  page-2026-06-08T00-42-06-520Z.yml  page-2026-06-08T00-43-01-278Z.yml
Final_Report/: error_analysis_cases.csv  final_report_sections.md  generate_final_report_artifacts.py  generate_report_figures.py  main_final_comparison_table.csv  wider_baseline_comparison_table.csv
alembic/: env.py
configs/: README.md  base.yaml  data.yaml  models.yaml  paths.yaml
docs/: architecture.md  local_stack.md
end_to_end/: README.md  __init__.py  api.py  calibration.py  demo_transaction.json  ensemble_decision.md  event_gnn_inference.py  example_input.json  explanations.py  feature_builder.py  feature_requirements.md  feedback_store.py  input_schema.json  model_loader.py  monitoring.py  (+5 more)
(+235 files in other folders)
