[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fraud-detection"
version = "0.1.0"
description = "Explainable multi-modal risk detection for online stores."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.13.0",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "jsonschema>=4.23.0",
    "lightgbm>=4.0.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "psycopg[binary]>=3.2.0",
    "pydantic>=2.8.0",
    "scikit-learn>=1.3.0",
    "sqlalchemy>=2.0.0",
    "uvicorn>=0.30.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
